--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,16 +1,19 @@
 [versions]
-accompanistPermissions = "0.36.0"
-activityCompose = "1.9.2"
-agp = "8.5.2"
-coreKtx = "1.13.1"
-kotlinxCoroutinesAndroid = "1.9.0"
-lifecycleViewmodelCompose = "2.8.6"
-kotlin = "2.0.21"
-navigationCompose = "2.8.3"
+accompanistPermissions = "0.37.3"
+activityCompose = "1.12.4"
+agp = "9.0.1"
+composeBom = "2026.02.00"
+coreKtx = "1.17.0"
+kotlinxCoroutinesAndroid = "1.10.2"
+lifecycleViewmodelCompose = "2.10.0"
+kotlin = "2.3.10"
+material = "1.13.0"
+navigationCompose = "2.9.7"
 
 [libraries]
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanistPermissions" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
+androidx-compose-bom = { module = "androidx.compose:compose-bom", version.ref = "composeBom" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-lifecycle-runtime-compose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycleViewmodelCompose" }
 androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelCompose" }
@@ -22,6 +25,7 @@ androidx-ui-graphics = { module = "androidx.compose.ui:ui-graphics" }
 androidx-ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
 androidx-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinxCoroutinesAndroid" }
+material = { module = "com.google.android.material:material", version.ref = "material" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
